<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="sparks_title">Sparks</string>
    <string name="sparks">Sparks</string>
    <string name="sparks_summary">Electrify your experience</string>
    <string name="buttons_category">Buttons</string>
    <string name="gestures_category">Gestures</string>
    <string name="lockscreen_category">Lockscreen</string>
    <string name="misc_category">Miscellaneous</string>
    <string name="navigation_category">Navigation</string>
    <string name="statusbar_category">Statusbar</string>
    <string name="system_category">System</string>
    <string name="system_global_actions_category">Global actions</string>
    <string name="global_actions_title">Power menu</string>
    <string name="global_actions_summary">Select what to show when you press the power button</string>
    <string name="global_actions_power">Power</string>
    <string name="global_actions_restart">Restart</string>
    <string name="global_actions_airplane">Airplane</string>
    <string name="global_actions_settings">Settings</string>
    <string name="global_actions_lockdown">Lock down</string>
    <string name="global_actions_soundpanel">Sound panel</string>
    <string name="global_actions_users">Users</string>
    <string name="global_actions_screenshot">Screenshot</string>
    <string name="global_actions_screenrecord">Screenrecord</string>
    <string name="global_actions_flashlight">Flashlight</string>
    <string name="global_actions_advanced_reboot_title">Enable advanced restart</string>
    <string name="global_actions_advanced_reboot_summary">Show options for recovery and bootloader</string>
    <string name="smart_pixels_title">Smart Pixels</string>
    <string name="smart_pixels_summary">Save battery by shutting off extra pixels</string>
    <string name="smart_pixels_enable_title">Enable Smart Pixels</string>
    <string name="smart_pixels_enable_summary">Shut off pixels to reduce power consumption</string>
    <string name="smart_pixels_on_power_save_title">Auto-enable on battery saver</string>
    <string name="smart_pixels_on_power_save_summary">Enable Smart Pixels when battery saver is enabled</string>
    <string name="smart_pixels_percent">Percent of pixels to disable</string>
    <string name="smart_pixels_shift">Prevent burn-in by shifting pixels every</string>
    <string name="battery_icons_category">Battery Customization</string>
    <string name="battery_style_category">Battery</string>
    <string name="battery_style_title">Battery style</string>
    <string name="battery_style_summary">Change battery icon appearance</string>
    <string name="battery_style_port">Portrait</string>
    <string name="battery_style_circle">Circle</string>
    <string name="battery_style_dotted_circle">Dotted circle</string>
    <string name="battery_style_hidden">Hidden</string>
    <string name="battery_style_text">Text</string>
    <string name="show_battery_percent_title">Show percentage</string>
    <string name="battery_percent_none">Do not show</string>
    <string name="battery_percent_outside">Show beside icon</string>
    <string name="battery_percent_inside">Show inside icon</string>
    <string name="theme_category_title">Theme options</string>
    <string name="disable_themes_installed_title">System themes are unavailable to avoid conflicts with Substratum. Uninstall it if you wish to use these themes instead.</string>
    <string name="disable_accents_installed_title">Accent picker is unavailable to avoid conflicts with Substratum. Uninstall it if you wish to use the accent picker.</string>
    <string name="accent_picker_dialog_title">Select an accent color</string>
    <string name="theme_accent_picker_title">Accent color</string>
    <string name="theme_accent_picker_summary">Select system theme accent color</string>
    <string name="theme_accent_picker_default">Default</string>
    <string name="accent_picker_material_colors">Material palette</string>
    <string name="accent_picker_custom_colors">User requested</string>
    <string name="status_bar_tuner_title">Status bar items</string>
    <string name="status_bar_tuner_summary">Edit status bar icons and options</string>
    <string name="navbar_tuner_title">Edit navigation bar</string>
    <string name="navbar_tuner_summary">Edit the navigation bar layout and buttons</string>
    <string name="lock_screen_shortcuts_title">Lock screen shortcuts</string>
    <string name="lock_screen_shortcuts_summary">Manage lock screen bottom shortcuts</string>
    <string name="double_tap_sleep_lockscreen">Double tap to sleep on lockscreen</string>
    <string name="double_tap_sleep_gesture_title">Double tap to sleep on status bar</string>
    <string name="aosp_gesture_title">AOSP Gestures</string>
    <string name="notifications_category">Notifications</string>
    <string name="notification_sound_vib_screen_on_title">Noisy notifications if screen on</string>
    <string name="notification_sound_vib_screen_on_summary">Play sound and vibration for notifications when screen is on</string>
    <string name="aosp_recents_category">Recents customization</string>
    <string name="recents_component_type_title">Recents Style</string>
    <string name="recents_pie">Pie</string>
    <string name="recents_oreo">Oreo</string>
    <string name="three_finger_gesture">Three finger gesture</string>
    <string name="three_finger_gesture_summary">Swipe three finger to screenshot</string>
    <string name="recents_icon_pack_title">Icon Pack</string>
    <string name="recents_icon_pack_summary">Apply a custom icon pack for Recents panel</string>
    <string name="battery_light_settings">Battery LED</string>
    <string name="battery_light_enable">Enable</string>
    <string name="battery_light_allow_on_dnd_title">Battery light in Do Not Disturb mode</string>
    <string name="battery_light_low_blinking_title">Blinking light on low battery</string>
    <string name="battery_light_cat">Battery light color when charging</string>
    <string name="battery_light_low_color">Low battery</string>
    <string name="battery_light_medium_color">Medium battery</string>
    <string name="battery_light_full_color">Almost full battery</string>
    <string name="battery_light_reallyfull_color">Full (100) battery</string>
    <string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Press on color below to apply</string>
    <string name="arrow_right">→</string>
    <string name="arrow_down">↓</string>
    <string name="hex">Hex:</string>
    <string name="hex_hint">#ff000000</string>
    <string name="set">Set</string>
    <string name="color_default">Default</string>
    <string name="status_bar_title">Status bar</string>
    <string name="status_bar_style_title">Style</string>
    <string name="status_bar_clock">Clock &amp; Date</string>
    <string name="clock_options_title">Clock options</string>
    <string name="clock_summary">Customize the statusbar clock in a variety of ways</string>
    <string name="clock_enabled">Enabled</string>
    <string name="clock_disabled">Disabled</string>
    <string name="status_bar_clock_style_reset">Reset color</string>
    <string name="status_bar_show_clock_title">Show clock &amp; date</string>
    <string name="status_bar_am_pm_title">AM/PM</string>
    <string name="status_bar_am_pm_info">24-hour clock is enabled</string>
    <string name="enable_clock_weekday">Day of the week</string>
    <string name="enable_clock_weekday_summary">Abbreviated day of the week before the time</string>
    <string name="dont_show">Don\'t show</string>
    <string name="clock_date_display">Date</string>
    <string name="clock_date_display_summary">Display custom date before the clock</string>
    <string name="clock_date_style">Date style</string>
    <string name="clock_date_format">Date format</string>
    <string name="clock_date_string_edittext_title">Must be in DateFormat eg. MM/dd/yy</string>
    <string name="clock_date_string_edittext_summary">Enter string</string>
    <string name="am_pm_clock_normal">Normal font size</string>
    <string name="am_pm_clock_small">Small font size</string>
    <string name="am_pm_clock_none">Don\'t show</string>
    <string name="clock_date_display_none">Don\'t show</string>
    <string name="clock_date_display_small">Small font size</string>
    <string name="clock_date_display_normal">Normal font size</string>
    <string name="clock_date_style_normal">Normal</string>
    <string name="clock_date_style_lowercase">Lowercase</string>
    <string name="clock_date_style_uppercase">Uppercase</string>
    <string name="clock_date_right">Right of time</string>
    <string name="clock_date_left">Left of time</string>
    <string name="clock_date_position">Date position</string>
    <string name="lockscreen_clock_title">Clock widget</string>
    <string name="lockscreen_clock_summary">Show the clock widget on the lockscreen</string>
    <string name="lockscreen_info_title">Items underneath the clock</string>
    <string name="lockscreen_info_summary">Show the date, weather, alarms and zen on the lockscreen</string>
    <string name="lockscreen_clock_selection_title">Clock style</string>
    <string name="lockscreen_clock_selection_digital">Default</string>
    <string name="lockscreen_clock_selection_digital_bold">Digital (bold)</string>
    <string name="lockscreen_clock_selection_analog">Analog</string>
    <string name="lockscreen_clock_selection_du">Analog (StatiX)</string>
    <string name="lockscreen_clock_selection_sammy">Sammy</string>
    <string name="lockscreen_clock_selection_sammy_bold">Sammy (bold)</string>
    <string name="weather_unit">Weather temperature unit</string>
    <string name="weather_unit_metric" translatable="false">Celsius</string>
    <string name="weather_unit_imperial" translatable="false">Fahrenheit</string>
    <string name="status_traffic_title">Customize net activity indicators</string>
    <string name="status_traffic_summary">Options for the statusbar network activity indicators</string>
    <string name="traffic_title">Net activity indicators</string>
    <string name="network_traffic_state_title">Show net activity in expanded statusbar</string>
    <string name="network_traffic_autohide_threshold_title">Net activity autohide threshold (KB/s)</string>
    <string name="show_fourg_icon_title">4G icon</string>
    <string name="show_fourg_icon_summary">Display 4G icon instead of LTE icon</string>
    <string name="button_backlight_options_category">Backlight options</string>
    <string name="button_backlight_enable_title">Allow button backlight</string>
    <string name="button_link_brightness">Link to screen brightness</string>
    <string name="button_link_brightness_summary">Button backlight brightness will adjust based on the screen\'s brightness level</string>
    <string name="button_manual_brightness">Brightness level</string>
    <string name="button_timeout_title">Backlight timeout</string>
    <string name="button_backlight_on_touch_only_title">Button backlight touch</string>
    <string name="button_backlight_on_touch_only_summary">Button backlight will only appear when buttons are pressed rather than on all the time. Timeout still impacts this feature.</string>
    <string name="hardware_keys_home_key_title">Home button</string>
    <string name="hardware_keys_menu_key_title">Menu button</string>
    <string name="hardware_keys_assist_key_title">Search button</string>
    <string name="hardware_keys_appswitch_key_title">Overview button</string>
    <string name="hardware_keys_back_key_title">Back button</string>
    <string name="hardware_keys_double_tap_summary">Set double tap action</string>
    <string name="hardware_keys_single_tap_summary">Set single tap action</string>
    <string name="hardware_keys_long_press_summary">Set long press action</string>
    <string name="hardware_keys_single_tap_title">Single tap action</string>
</resources>