<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2018 StatiXOS
  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.
  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.
  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/statusbar_category"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">

     <Preference
        android:title="@string/status_bar_tuner_title"
        android:summary="@string/status_bar_tuner_summary">
        <intent android:action="android.intent.action.MAIN"
            android:targetPackage="com.android.systemui"
            android:targetClass="com.android.systemui.tuner.StatusBarIconsTunerActivity" />
     </Preference>

     <PreferenceCategory
        android:title="@string/battery_icons_category">
         <com.statix.sparks.preferences.SystemSettingListPreference
            android:key="status_bar_battery_style"
            android:title="@string/battery_style_title"
            android:summary="%s"
            android:dialogTitle="@string/battery_style_title"
            android:entries="@array/status_bar_battery_style_entries"
            android:entryValues="@array/status_bar_battery_style_values"
            android:defaultValue="0" />
         <com.statix.sparks.preferences.SystemSettingListPreference
            android:key="show_battery_percent"
            android:title="@string/show_battery_percent_title"
            android:entries="@array/battery_percent_entries"
            android:entryValues="@array/battery_percent_values"
            android:defaultValue="0" />
     </PreferenceCategory>

     <PreferenceCategory
        android:title="@string/clock_options_title">
        <Preference
            android:key="clock_opts"
            android:title="@string/clock_options_title"
            android:summary="@string/clock_summary"
            android:fragment="com.statix.sparks.fragments.statusbar.ClockOptions" />

    </PreferenceCategory>

    <Preference
        android:title="@string/status_traffic_title"
        android:summary="@string/status_traffic_summary"
        android:fragment="com.statix.sparks.fragments.statusbar.TrafficIndicators" />
       
</PreferenceScreen>
