<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2016 CarbonROM
  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.
  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.
  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/misc_category"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">

    <PreferenceCategory
	android:title="@string/notifications_category">

        <com.statix.sparks.preferences.SystemSettingSwitchPreference
            android:key="notification_sound_vib_screen_on"
            android:title="@string/notification_sound_vib_screen_on_title"
            android:summary="@string/notification_sound_vib_screen_on_summary"
            android:defaultValue="true" />

    </PreferenceCategory>

    <PreferenceCategory
         android:key="recents_ui_aosp_recents_category"
         android:title="@string/aosp_recents_category">

    	<ListPreference
            android:key="recents_component"
       	    android:title="@string/recents_component_type_title"
            android:dialogTitle="@string/recents_component_type_title"
            android:entries="@array/recents_component_type_title_entries"
            android:defaultValue="0"
            android:entryValues="@array/recents_component_type_title_values"/>

        <Preference
            android:key="recents_icon_pack"
            android:title="@string/recents_icon_pack_title"
            android:summary="@string/recents_icon_pack_summary" />

     </PreferenceCategory>

</PreferenceScreen>
